# Rust-big-project-flashcards

./: .gitignore  Cargo.toml  readme.md
src/: app.rs  lib.rs  main.rs
src/database/: db.rs
src/export/: json.rs
src/models/: deck.rs  deck_set.rs  flashcard.rs  learning_card.rs  learning_session.rs  mod.rs  review_data.rs  sm2.rs
